--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* MathInMotion Design System - Mathematical elegance meets modern design
+/* Algovisuals Design System - Mathematical elegance meets modern design
 All colors MUST be HSL.
 */
 
